# text-analyzer

./: .env  README.md  docker-compose.yaml
client/: .dockerignore  Dockerfile
client/src/components/EmptyResult/: EmptyResult.tsx
client/src/components/PieChart/: PieChart.tsx
client/src/components/TagsTable/: TagsTable.tsx
client/src/pages/ErrorPage/: ErrorPage.tsx
client/src/pages/ResultPage/: ResultPage.css  ResultPage.tsx
client/src/pages/UploadFilePage/: UploadFilePage.tsx  analyse-text-request.ts  query-result-loop.ts  result-request-loop.ts
client/src/utils/: api.ts  define-axios-error.ts
server/: Dockerfile  pom.xml
server/src/main/CollectionAPI/: Фаза 2 download.postman_collection.json
server/src/main/java/org/download/: UploadingFilesApplication.java
server/src/main/java/org/download/config/: CorsConfig.java  CustomCorsFilter.java  RabbitMQConfiguration.java  StorageProperties.java
server/src/main/java/org/download/controller/: FileUploadController.java
server/src/main/resources/: application.properties
server/src/test/java/org/download/: FileUploadControllerTest.java
text_analyzer/: Dockerfile  README.md  pyproject.toml
text_analyzer/app/: model_params.yaml
text_analyzer/app/model/: .gitignore
text_analyzer/app/src/: add_file_to_queue.py  app.py  download_model.py  get_tags_from_queue.py  preprocessing.py  rabbit_connection.py  sigterm_handler.py
text_analyzer/app/test_data/: ╨в╤А╨░╨╜╤Б╤Д╨╛╤А╨╝╨╡╤А╤Л.docx
text_analyzer/model_train_script/: training_and_other_prep.py
(+7 files in other folders)
